Korekta funkcji przeliczającej xyz do neu

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 resultsXYZ2BLH_KRASOWSKI.txt
 resultsXYZ2NEUP_GRS80.txt
 resultsXYZ2NEUP_WGS84.txt
+resultsBLH2XYZ_GRS80.txt
+blh.txt
+neu.txt
+blh.txt
